# ELRSlang

./: .gitignore  AGENTS.md  README.md  pyproject.toml
assets/scenes/falcor/: README.md
assets/scenes/falcor/falcor_pyscene/: cornell_box_EnvLight.pyscene  pica_pica.pyscene
graphs/: dxr_pathtrace.json  hybrid_debug.json  raster_forward.json  slangpy_preview.json
mobile/android/: README.md  settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/assets/elrslang/: manifest.json  scene.json
mobile/android/app/src/main/assets/elrslang/shaders/: dxr_pathtrace.slang  hybrid_composite.slang  raster_forward.slang
mobile/android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
mobile/android/app/src/main/java/dev/elrslang/: SmokeActivity.java
requirements/: dev.txt  lock-py312-win64.txt
scripts/: bootstrap.ps1  smoke.ps1
shaders/: common.slang  dxr_pathtrace.slang  preview.slang  raster_forward.slang  tonemap.slang
src/elrslang/: __init__.py  app.py  camera.py  device.py  gpu.py  passes.py  paths.py  pipeline.py  raster_pipeline.py  render_graph.py  renderer.py  resources.py  scene.py  scene_buffers.py  viewer.py
src/elrslang/tools/: __init__.py  export_mobile.py  fbx_import.py
tests/: test_camera.py  test_export_mobile.py  test_gpu_smoke.py  test_render_graph.py  test_scene.py  test_scene_buffers.py
